@@ -1,0 +1,237 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+               "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+<title>Documentation for <code>gnuplot-interface</code> developers</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+<meta name="title" content="Documentation for <code>gnuplot-interface</code> developers"/>
+<meta name="generator" content="Org-mode"/>
+<meta name="generated" content="2012-11-07 13:23:28 "/>
+<meta name="author" content="Mirko Vukovic"/>
+<meta name="description" content=""/>
+<meta name="keywords" content=""/>
+<style type="text/css">
+ <!--/*--><![CDATA[/*><!--*/
+  html { font-family: Times, serif; font-size: 12pt; }
+  .title  { text-align: center; }
+  .todo   { color: red; }
+  .done   { color: green; }
+  .tag    { background-color: #add8e6; font-weight:normal }
+  .target { }
+  .timestamp { color: #bebebe; }
+  .timestamp-kwd { color: #5f9ea0; }
+  .right  {margin-left:auto; margin-right:0px;  text-align:right;}
+  .left   {margin-left:0px;  margin-right:auto; text-align:left;}
+  .center {margin-left:auto; margin-right:auto; text-align:center;}
+  p.verse { margin-left: 3% }
+  pre {
+	border: 1pt solid #AEBDCC;
+	background-color: #F3F5F7;
+	padding: 5pt;
+	font-family: courier, monospace;
+        font-size: 90%;
+        overflow:auto;
+  }
+  table { border-collapse: collapse; }
+  td, th { vertical-align: top;  }
+  th.right  { text-align:center;  }
+  th.left   { text-align:center;   }
+  th.center { text-align:center; }
+  td.right  { text-align:right;  }
+  td.left   { text-align:left;   }
+  td.center { text-align:center; }
+  dt { font-weight: bold; }
+  div.figure { padding: 0.5em; }
+  div.figure p { text-align: center; }
+  div.inlinetask {
+    padding:10px;
+    border:2px solid gray;
+    margin:10px;
+    background: #ffffcc;
+  }
+  textarea { overflow-x: auto; }
+  .linenr { font-size:smaller }
+  .code-highlighted {background-color:#ffff00;}
+  .org-info-js_info-navigation { border-style:none; }
+  #org-info-js_console-label { font-size:10px; font-weight:bold;
+                               white-space:nowrap; }
+  .org-info-js_search-highlight {background-color:#ffff00; color:#000000;
+                                 font-weight:bold; }
+  /*]]>*/-->
+</style>
+<script type="text/javascript">
+<!--/*--><![CDATA[/*><!--*/
+ function CodeHighlightOn(elem, id)
+ {
+   var target = document.getElementById(id);
+   if(null != target) {
+     elem.cacheClassElem = elem.className;
+     elem.cacheClassTarget = target.className;
+     target.className = "code-highlighted";
+     elem.className   = "code-highlighted";
+   }
+ }
+ function CodeHighlightOff(elem, id)
+ {
+   var target = document.getElementById(id);
+   if(elem.cacheClassElem)
+     elem.className = elem.cacheClassElem;
+   if(elem.cacheClassTarget)
+     target.className = elem.cacheClassTarget;
+ }
+/*]]>*///-->
+</script>
+
+</head>
+<body>
+
+<div id="preamble">
+
+</div>
+
+<div id="content">
+<h1 class="title">Documentation for <code>gnuplot-interface</code> developers</h1>
+
+
+<div id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#sec-1">1 On interfacing with external <code>gnuplot</code> processes</a>
+<ul>
+<li><a href="#sec-1-1">1.1 The modes of interacting with <code>gnuplot</code></a></li>
+<li><a href="#sec-1-2">1.2 Effects of setting <code>:wait</code> to <code>T</code></a></li>
+</ul>
+</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-1" class="outline-2">
+<h2 id="sec-1"><span class="section-number-2">1</span> On interfacing with external <code>gnuplot</code> processes</h2>
+<div class="outline-text-2" id="text-1">
+
+
+<p>
+  I built the interface on the following architectures
+</p>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<caption></caption>
+<colgroup><col class="left" /><col class="left" /><col class="left" />
+</colgroup>
+<thead>
+<tr><th scope="col" class="left">OS</th><th scope="col" class="left">Lisp</th><th scope="col" class="left">Gnuplot</th></tr>
+</thead>
+<tbody>
+<tr><td class="left">Linux</td><td class="left">SBCL</td><td class="left">Native</td></tr>
+<tr><td class="left">Cygwin+Windows</td><td class="left">CLisp</td><td class="left">Windows</td></tr>
+</tbody>
+</table>
+
+
+
+<p>
+  As of <span class="timestamp-wrapper"> <span class="timestamp">2012-11-07 Wed</span></span> I use CLisp's and SBCL's native interfaces
+  the gnuplot executable.  CLisp runs on Cygwin + Windows, but I call
+  the Windows version of <code>gnuplot</code>, as I cannot get X11 running.
+</p>
+<p>
+  I tried using the <code>external-program</code> package for a unified
+  interface, but failed, as I my requirements conflicted with the
+  packages' interface.  Details follow.
+</p>
+<p>
+  What I discuss below could be due to the fact that I use the Windows
+  version of gnuplot, wgnuplot.  On Windows I link to <code>c:/Program   Files/wgnuplot/bin/gnuplot.exe</code>. 
+</p>
+
+</div>
+
+<div id="outline-container-1-1" class="outline-3">
+<h3 id="sec-1-1"><span class="section-number-3">1.1</span> The modes of interacting with <code>gnuplot</code></h3>
+<div class="outline-text-3" id="text-1-1">
+
+
+<p>   
+   My operating mode is to start a process, and then send it a
+   succession of commands.  Thus, I can set gnuplot's state to persist
+   from command to command.
+</p>
+<p>
+   Another alternative is to start a process for each individual plot,
+   sending it a command at invocation while specifying the window to
+   persist.
+</p>
+
+<p>
+   On both SBCL and Clisp, I launch the external program, setting
+   <code>:wait</code> to <code>NIL</code>.  Otherwise, I get a broken pipe error.  On SBCL, I
+   use <code>sb-ext:run-program *executable* ... :wait nil</code>.  On Clisp, I
+   use <code>ext:run-program *executable* ... :wait nil</code>.
+</p>
+
+</div>
+
+</div>
+
+<div id="outline-container-1-2" class="outline-3">
+<h3 id="sec-1-2"><span class="section-number-3">1.2</span> Effects of setting <code>:wait</code> to <code>T</code></h3>
+<div class="outline-text-3" id="text-1-2">
+
+
+<p>
+   The following table summarizes the effects of setting <code>:wait</code> to <code>T</code>
+   or <code>NIL</code>:
+</p><table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<caption></caption>
+<colgroup><col class="left" /><col class="left" /><col class="left" /><col class="right" /><col class="left" />
+</colgroup>
+<thead>
+<tr><th scope="col" class="left"></th><th scope="col" class="left"><code>:wait</code></th><th scope="col" class="left">Hangs?</th><th scope="col" class="right">CPU usage</th><th scope="col" class="left">Accepts Input?</th></tr>
+</thead>
+<tbody>
+<tr><td class="left">SBCL</td><td class="left"><code>nil</code></td><td class="left">No</td><td class="right">0</td><td class="left">Yes</td></tr>
+<tr><td class="left"></td><td class="left"><code>t</code></td><td class="left">Yes</td><td class="right">0</td><td class="left">Broken Pipe Error</td></tr>
+</tbody>
+<tbody>
+<tr><td class="left">CLISP</td><td class="left"><code>nil</code></td><td class="left">No</td><td class="right">0%</td><td class="left">Yes</td></tr>
+<tr><td class="left"></td><td class="left"><code>t</code></td><td class="left">No</td><td class="right">100%</td><td class="left">Broken Pipe Error</td></tr>
+</tbody>
+</table>
+
+
+
+<p>
+   I also tried launching gnuplot by specifying a plot command: <code>-p -e    plot sin(x)</code> as <code>\'("-p" "-e" "plot sin(x)")</code>.  This did not help:
+</p><table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<caption></caption>
+<colgroup><col class="left" /><col class="left" /><col class="left" /><col class="right" /><col class="left" /><col class="left" />
+</colgroup>
+<thead>
+<tr><th scope="col" class="left"></th><th scope="col" class="left"><code>:wait</code></th><th scope="col" class="left">Hangs?</th><th scope="col" class="right">CPU usage</th><th scope="col" class="left">Creates Plot?</th><th scope="col" class="left">Accepts Input?</th></tr>
+</thead>
+<tbody>
+<tr><td class="left">SBCL</td><td class="left"><code>nil</code></td><td class="left">No</td><td class="right">0</td><td class="left">No</td><td class="left">Broken Pipe Error</td></tr>
+<tr><td class="left"></td><td class="left"><code>t</code></td><td class="left">Yes</td><td class="right">0</td><td class="left">No</td><td class="left">Broken Pipe Error</td></tr>
+</tbody>
+<tbody>
+<tr><td class="left">CLISP</td><td class="left"><code>nil</code></td><td class="left">No</td><td class="right">100%</td><td class="left">Yes</td><td class="left">Broken Pipe Error</td></tr>
+<tr><td class="left"></td><td class="left"><code>t</code></td><td class="left">No</td><td class="right">0%</td><td class="left">Yes</td><td class="left">Yes</td></tr>
+</tbody>
+</table>
+
+</div>
+</div>
+</div>
+</div>
+
+<div id="postamble">
+<p class="date">Date: 2012-11-07 13:23:28 </p>
+<p class="author">Author: Mirko Vukovic</p>
+<p class="creator">Org version 7.8.03 with Emacs version 23</p>
+<a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
+
+</div>
+</body>
+</html>
