@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="title" content="<code>gnuplot</code>-interface package"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2012-11-07 13:49:34 "/>
+<meta name="generated" content="2012-11-07 13:50:50 "/>
 <meta name="author" content="Mirko Vukovic"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -246,7 +246,7 @@ variable has to be set to the new path.
 </div>
 
 <div id="postamble">
-<p class="date">Date: 2012-11-07 13:49:34 </p>
+<p class="date">Date: 2012-11-07 13:50:50 </p>
 <p class="author">Author: Mirko Vukovic</p>
 <p class="creator">Org version 7.8.03 with Emacs version 23</p>
 <a href="http://validator.w3.org/check?uri=referer">Validate XHTML 1.0</a>
